--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,22 @@ header > h1 {
 	margin-top: 20px;
 }
 
+.green-glow {
+	border: 4px solid #21F511;
+	box-shadow: 0 0 10px #31b43a;
+}
 
 
+.red-glow {
+	border: 4px solid #fc121b;
+	box-shadow: 0 0 10px #d01115;
+}
+
+.grey-glow {
+	border: 4px solid #464647;
+	box-shadow: 0 0 10px #25292b;
+}
+
+/*UWAGA KOLEJNOSC KLAS MA ZNCZENIE!!!*/
+/*NOWA KLASA NADPISUJE STARA!!!!*/
 
